# item_manager

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
src/bot_api/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/bot_api/migrations/: 0001_initial.py
src/diseases/: admin.py  api.py  apps.py  forms.py  marks.txt  models.py  serializers.py  urls.py  views.py
src/diseases/migrations/: 0001_initial.py  0002_symptom_description_symptom_title_and_more.py
src/diseases/templates/diseases/: base.html  index.html
src/echo/: admin.py  models.py  serializers.py  urls.py  views.py
src/echo/migrations/: 0001_initial.py  0002_alter_echo_options_echo_ip_address_echo_user_agent.py  0003_remove_echo_ip_address_remove_echo_user_agent.py
src/project/: settings.py  urls.py
